blue/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-flask
  template:
    metadata:
      labels:
        app: python-flask
    spec:
      containers:
        - name: python-app
          image: 782782/python-flask:0.1
          resources:
            limits:
              memory: "2Gi"
              cpu: "500m"
            requests:
              memory: "1Gi"
              cpu: "200m"
