blue/load.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-load
spec:
  selector:
    app: python-flask
  type: LoadBalancer
  ports:
    - port: 5001
      targetPort: 5001
      protocol: TCP
